完成微博、用户展示页面

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ com.medmeeting.desc=${com.medmeeting.name}正在努力写《${com.medmeeting.tit
 com.medmeeting.project.type=api
 com.medmeeting.project.version=v1
 
+# \u4e0a\u4f20\u6587\u4ef6\u914d\u7f6e
+static.url = static/
+file.profilepictures.url = file/
+
 # 随机字符串
 com.medmeeting.value=${random.value}
 # 随机int
