--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,11 @@
 			<artifactId>qiniu-java-sdk</artifactId>
 			<version>[7.2.0, 7.2.99]</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>1.12.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
